<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/title_text"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:cardElevation="6dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true" >

            <TextView
                android:id="@+id/gratefulText"
                android:layout_gravity="center"
                android:text="@string/grateful_text"
                android:textSize="19sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    
    <Button
        android:id="@+id/startButton"
        android:text="@string/get_started_text"
        android:textColor="@color/light_blue"
        android:textSize="20sp"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>